--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+* {
+  font-family: 'Nunito Sans', sans-serif;
+}
+
 .App {
   text-align: center;
+  background-color: #fff !important;
 }
 
 .App-logo {
